<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile_item"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile_small" />
    <item
        android:id="@+id/search_item"
        android:title="@string/search_icon"
        android:icon="@drawable/ic_search_small" />
    <item
        android:id="@+id/home_item"
        android:title="@string/home"
        android:icon="@drawable/ic_home_small" />

    <item
        android:id="@+id/chrono_item"
        android:title="@string/chrono"
        android:icon="@drawable/ic_chrono_small" />
    <item
        android:id="@+id/health_item"
        android:title="@string/healthy_advice"
        android:icon="@drawable/ic_health_small" />
</menu>