<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:background="@color/primary_orange"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageDiet"

            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:contentDescription="@string/healthy_diet"
            android:scaleType="fitCenter"
            android:src="@drawable/healthy_diet"

            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textTitle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:gravity="center"
            android:text="@string/balanced_diet"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"

            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textDescription1"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"

            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="4dp"
            android:text="@string/healthy_diet_advice1"
            android:textColor="@color/white"
            android:textSize="16sp"

            tools:ignore="TextContrastCheck,VisualLintLongText" />

        <ImageView
            android:id="@+id/imageDiet2"

            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:contentDescription="@string/healthy_diet"
            android:scaleType="fitCenter"
            android:src="@drawable/healthy_diet2"

            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textDescription2"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="4dp"
            android:text="@string/healthy_diet_advice2"
            android:textColor="@color/white"
            android:textSize="16sp"

            tools:ignore="TextContrastCheck,VisualLintLongText" />

    </LinearLayout>
</ScrollView>
